--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Microservices",
+  "name": "matersoft",
   "version": "1.0.0",
   "description": "Microservices multiples apps ",
   "main": "index.js",
