--- a/microservices/email-sender/package.json
+++ b/microservices/email-sender/package.json
@@ -23,10 +23,10 @@
     "babel-plugin-source-map-support": "^2.0.1",
     "eslint": "^4.18.2",
     "jest": "^22.4.2",
-    "serverless": "^1.23.0",
     "serverless-webpack": "^5.2.0",
-    "webpack": "^4.29.6",
-    "webpack-node-externals": "^1.7.2"
+    "serverless": "^1.23.0",
+    "webpack-node-externals": "^1.7.2",
+    "webpack": "^4.29.6"
   },
   "scripts": {
     "invoke:sandbox": "./node_modules/.bin/serverless  invoke local  -f handle --stage=sandbox",
