--- a/microservices/email-sender/package.json
+++ b/microservices/email-sender/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "license": "MIT",
   "dependencies": {
+    "@matersoft/utils": "^0.0.1",
     "@sendgrid/mail": "^6.4.0",
-    "config": "^2.0.1",
-    "query-string": "^6.7.0"
+    "config": "^2.0.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.5",
@@ -22,13 +22,15 @@
     "babel-plugin-source-map-support": "^2.0.1",
     "eslint": "^4.18.2",
     "jest": "^22.4.2",
+    "serverless": "^1.45.1",
+    "serverless-offline": "^5.3.3",
     "serverless-webpack": "^5.2.0",
-    "serverless": "^1.23.0",
-    "webpack-node-externals": "^1.7.2",
-    "webpack": "^4.29.6"
+    "webpack": "^4.29.6",
+    "webpack-node-externals": "^1.7.2"
   },
   "scripts": {
-    "invoke:sandbox": "./node_modules/.bin/serverless  invoke local  -f handle --stage=sandbox",
+    "offline:develop": "serverless offline  --stage=develop --path src/events/test.json",
+    "invoke:sandbox": "./node_modules/.bin/serverless  invoke local  -f handle --stage=sandbox --path src/events/test.json",
     "deploy:sandbox": "./node_modules/.bin/serverless deploy --stage=sandbox",
     "clean": "rm -rf ./node_modules",
     "print": "echo 'HI'"
