--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,21 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# Microservices
+# package directories
+node_modules/
+
+# Serverless directories
+.serverless/
+.dynamodb
+
+# files
+.DS_Store
+.env
+
+# tests
+coverage/
+
 # Runtime data
 pids
 *.pid
